--- a/package.json
+++ b/package.json
@@ -26,16 +26,16 @@
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
+    "aplayer": "1.10.1",
     "coffeescript": "^2.7.0",
     "cross-env": "7.0.3",
+    "disqusjs": "^3.0.1",
     "esbuild": "^0.14.48",
     "esbuild-stylus-loader": "^0.4.2",
-    "stylus": "^0.58.1"
-  },
-  "dependencies": {
-    "aplayer": "1.10.1",
+    "nprogress": "0.2.0",
+    "stylus": "^0.58.1",
+    "zoom-image": "0.1.4",
     "corner-notie": "1.2.1",
-    "disqusjs": "^3.0.1",
     "dplayer": "1.26.0",
     "fancybox": "3.0.1",
     "fastclick": "1.0.6",
@@ -44,10 +44,9 @@
     "lazyload": "2.0.0-rc.2",
     "leancloud-storage": "4.12.3",
     "node-fetch": "*",
-    "nprogress": "0.2.0",
     "react": "^18.2.0",
     "regenerator-runtime": "^0.13.9",
-    "social-share.js": "1.0.16",
-    "zoom-image": "0.1.4"
-  }
+    "social-share.js": "1.0.16"
+  },
+  "dependencies": {}
 }
