--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "hexo-theme-sagiri",
-  "version": "0.0.1",
+  "name": "hexo-theme-sagiri-x",
+  "version": "0.1.0",
   "description": "As lovely as sagiri",
   "main": "index.js",
   "directories": {
@@ -17,12 +17,12 @@
     "sagiri",
     "Hexo"
   ],
-  "author": "DIYgod",
+  "author": "XiangNorth",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/DIYgod/hexo-theme-sagiri/issues"
+    "url": "https://github.com/XiangNorth/Hexo-theme-sagiri-x/issues"
   },
-  "homepage": "https://diygod.me",
+  "homepage": "https://github.com/XiangNorth/Hexo-theme-sagiri-x/",
   "devDependencies": {
     "@babel/core": "^7.18.6",
     "@babel/preset-env": "^7.18.6",
