--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -6,8 +6,7 @@ name: CI
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    tags:
-      - "v*"
+    branches: [main]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch: 
@@ -45,7 +44,7 @@ jobs:
         with: 
           title: "Sagiri-X ${{ github.ref_name }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
-          automatic_release_tag: '*'
+          automatic_release_tag: 'v*'
           prerelease: false
           files: sagiri-x.zip
 
