--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,7 +7,6 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     branches: [main]
-    tags: 'v*'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch: 
@@ -43,7 +42,7 @@ jobs:
       - name: Automatic Releases
         uses: marvinpinto/action-automatic-releases@v1.2.1
         with: 
-          title: "Sagiri-X ${{ github.ref_name }}"
+          title: "Sagiri-X Latest"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: 'latest'
           prerelease: false
