--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,7 +10,7 @@ on:
       - "v*"
 
   # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch: 
+  workflow_dispatch:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -23,26 +23,24 @@ jobs:
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v3
-      
+
       - name: Clone Theme
         run: |
           git clone ${{ github.repositoryUrl }}
           cd hexo-theme-sagiri-x
-          
+
       - name: Compress it
         uses: thedoctor0/zip-release@main
         with:
-          type: 'zip'
-          filename: 'sagiri-x.zip'
-          exclusions: '*.git* /*node_modules/* .editorconfig'
-        
+          type: "zip"
+          filename: "sagiri-x.zip"
+          exclusions: "*.git* /*node_modules/* .editorconfig"
 
       # Runs a single command using the runners shell
       - name: Automatic Releases
         uses: marvinpinto/action-automatic-releases@v1.2.1
-        with: 
+        with:
           title: "Sagiri-X ${{ github.ref_name }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           files: sagiri-x.zip
-
