--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,6 @@ favicon:
   apple_touch_icon: /apple-touch-icon.png
   safari_pinned_tab: /safari-pinned-tab.svg
   android_manifest: /manifest.json
-  #ms_browserconfig: /images/browserconfig.xml
 
 # Set default keywords (Use a comma to separate)
 keywords: "DIYgod,blog"
@@ -235,14 +234,8 @@ sidebar:
   # Sidebar offset from top menubar in pixels (only for Pisces | Gemini).
   offset: 52
 
-  # Back to top in sidebar (only for Pisces | Gemini).
-  b2t: false
-
-  # Scroll percent label in b2t button.
-  scrollpercent: false
-
-  # Enable sidebar on narrow view (only for Muse | Mist).
-  onmobile: false
+  # Back to top.
+  b2t: true
 
 # ---------------------------------------------------------------
 # Post Settings
@@ -270,21 +263,6 @@ post_meta:
   updated_at: false
   categories: true
 
-# Post wordcount display settings
-# Dependencies: https://github.com/willin/hexo-wordcount
-post_wordcount:
-  item_text: true
-  wordcount: true
-  min2read: false
-  totalcount: false
-  separated_meta: false
-
-# Wechat Subscriber
-#wechat_subscriber:
-#enabled: true
-#qcode: /path/to/your/wechatqcode ex. /uploads/wechat-qcode.jpg
-#description: ex. subscribe to my blog by scanning my public wechat account
-
 # Reward
 reward_comment:
 wechatpay: /images/wechatpay.png
@@ -307,12 +285,6 @@ mobile_layout_economy: false
 # Android Chrome header panel color ($black-deep).
 android_chrome_color: "#fff"
 
-# Code Highlight theme
-# Available value:
-#    normal | night | night eighties | night blue | night bright
-# https://github.com/chriskempson/tomorrow-theme
-highlight_theme: normal
-
 # ---------------------------------------------------------------
 # Font Settings
 # - Find fonts on Google Fonts (https://www.google.com/fonts)
@@ -320,10 +292,6 @@ highlight_theme: normal
 #     light, light italic, normal, normal italic, bold, bold italic
 # - Be aware that setting too much fonts will cause site running slowly
 # - Introduce in 5.0.1
-# ---------------------------------------------------------------
-# CAUTION! Safari Version 10.1.2 bug: https://github.com/iissnan/hexo-theme-next/issues/1844
-# To avoid space between header and sidebar in Pisces / Gemini themes recommended to use Web Safe fonts for `global` (and `logo`):
-# Arial | Tahoma | Helvetica | Times New Roman | Courier New | Verdana | Georgia | Palatino | Garamond | Comic Sans MS | Trebuchet MS
 # ---------------------------------------------------------------
 font:
   enable: false
@@ -445,14 +413,6 @@ gitment:
 # Warning: Baidu Share does not support https.
 #baidushare:
 ##  type: button
-
-# Share
-# This plugin is more useful in China, make sure you known how to use it.
-# And you can find the use guide at official webiste: http://www.jiathis.com/.
-# Warning: JiaThis does not support https.
-#jiathis:
-##uid: Get this uid from http://www.jiathis.com/
-#add_this_id:
 
 # Google Webmaster tools verification setting
 # See: https://www.google.com/webmasters/
