--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "cross-env": "7.0.3",
     "disqusjs": "^3.0.1",
     "dplayer": "1.26.0",
+    "ejs": "^3.1.8",
     "esbuild": "^0.14.48",
     "esbuild-stylus-loader": "^0.4.2",
-    "fancybox": "3.0.1",
     "fastclick": "1.0.6",
     "gsap": "3.10.4",
     "jquery-pjax": "2.0.1",
+    "js-yaml": "^4.1.0",
     "nprogress": "0.2.0",
     "react": "^18.2.0",
     "social-share.js": "1.0.16",
