--- a/package.json
+++ b/package.json
@@ -38,8 +38,10 @@
     "jquery-pjax": "2.0.1",
     "js-yaml": "^4.1.0",
     "nprogress": "0.2.0",
+    "pjax": "^0.2.8",
     "stylus": "^0.58.1",
     "typescript": "^4.7.4",
+    "vanilla-js-menu-scrollspy": "^1.0.1",
     "zoom-image": "0.1.4"
   }
 }
