--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,10 +7,6 @@ on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
     tags: "v*"
-    # Triggers the workflow on pull request events but only for the "main" branch
-  pull_request:
-      branches:
-        - main
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -45,7 +41,7 @@ jobs:
       - name: Automatic Releases
         uses: marvinpinto/action-automatic-releases@v1.2.1
         with:
-          title: "Anya Latest Release"
+          title: "Anya ${{github.ref_name}}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           automatic_release_tag: "latest"
           prerelease: false
